Prevent double loading and align title layout spacing

--- a/src/app/title/title.component.scss
+++ b/src/app/title/title.component.scss
@@ -12,7 +12,7 @@
   margin-left: 0;
   margin-right: 0;
   align-items: flex-start;
-  --bs-gutter-x: 0.85rem;
+  --bs-gutter-x: 0;
 }
 
 .title-content-wrap {
@@ -203,10 +203,6 @@ b {
 }
 
 @media (min-width: 768px) {
-  .title-layout {
-    --bs-gutter-x: 0.78rem;
-  }
-
   .title-poster-col {
     width: min(300px, 100%);
     align-items: flex-start;
